--- a/en/404.html
+++ b/en/404.html
@@ -7,16 +7,16 @@
         <title>404 Page not found - 皮革新茶馆</title><meta name="Description" content="皮·革新茶馆"><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="皮·革新茶馆" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://alexandrawallace.github.io/en/404.html" /><meta property="og:image" content="https://alexandrawallace.github.io/logo.png"/><meta property="og:site_name" content="皮革新茶馆" />
+<meta property="og:url" content="https://newtea.tk/en/404.html" /><meta property="og:image" content="https://newtea.tk/logo.png"/><meta property="og:site_name" content="皮革新茶馆" />
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://alexandrawallace.github.io/logo.png"/>
+<meta name="twitter:image" content="https://newtea.tk/logo.png"/>
 
 <meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content="皮·革新茶馆"/>
 <meta name="application-name" content="LoveIt">
 <meta name="apple-mobile-web-app-title" content="LoveIt"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://alexandrawallace.github.io/en/404.html" /><link rel="stylesheet" href="/css/style.min.css"><link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://newtea.tk/en/404.html" /><link rel="stylesheet" href="/css/style.min.css"><link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
         <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/all.min.css"></noscript><link rel="preload" href="https://cdn.jsdelivr.net/npm/animate.css@4.1.1/animate.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
         <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@4.1.1/animate.min.css"></noscript></head>
     <body data-header-desktop="fixed" data-header-mobile="auto"><script type="text/javascript">(window.localStorage && localStorage.getItem('theme') ? localStorage.getItem('theme') === 'dark' : ('auto' === 'auto' ? window.matchMedia('(prefers-color-scheme: dark)').matches : 'auto' === 'dark')) && document.body.setAttribute('theme', 'dark');</script>
@@ -24,7 +24,7 @@
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/en/" title="皮革新茶馆"><span class="header-title-pre"><img src='/image/avatar.png' height='50'/></span></a>
+            <a href="/en/" title="皮革新茶馆"><span class="header-title-pre"><img src='/images/avatar.png' height='50'/></span></a>
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item" href="/en/posts/"> Posts </a><a class="menu-item" href="/en/tags/"> Tags </a><a class="menu-item" href="/en/categories/"> Categories </a><a class="menu-item" href="/en/categories/documentation/"> Docs </a><a class="menu-item" href="/en/about/"> About </a><a class="menu-item" href="https://github.com/dillonzq/LoveIt" title="GitHub" rel="noopener noreffer" target="_blank"><i class='fab fa-github fa-fw' aria-hidden='true'></i>  </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
@@ -50,7 +50,7 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/en/" title="皮革新茶馆"><span class="header-title-pre"><img src='/image/avatar.png' height='50'/></span></a>
+                <a href="/en/" title="皮革新茶馆"><span class="header-title-pre"><img src='/images/avatar.png' height='50'/></span></a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
