--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>https://alexandrawallace.github.io</title>
-    <link rel="canonical" href="https://alexandrawallace.github.io">
+    <title>https://newtea.tk</title>
+    <link rel="canonical" href="https://newtea.tk">
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=https://alexandrawallace.github.io">
+    <meta http-equiv="refresh" content="0; url=https://newtea.tk">
   </head>
 </html>
