--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@
 <meta name="application-name" content="LoveIt">
 <meta name="apple-mobile-web-app-title" content="LoveIt"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://newtea.tk/about/" /><link rel="stylesheet" href="/css/style.min.css"><link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="https://newtea.tk/about/" /><link rel="prev" href="https://newtea.tk/game/" /><link rel="stylesheet" href="/css/style.min.css"><link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
         <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/all.min.css"></noscript><link rel="preload" href="https://cdn.jsdelivr.net/npm/animate.css@4.1.1/animate.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
         <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@4.1.1/animate.min.css"></noscript><script type="application/ld+json">
     {
@@ -51,7 +51,7 @@
             <a href="/" title="皮革新茶馆"><span class="header-title-pre"><img src='/images/avatar.png' height='50'/></span></a>
         </div>
         <div class="menu">
-            <div class="menu-inner"><a class="menu-item" href="/posts/"><i class='fas fa-book-open fa-lg'></i> 所有文章 </a><a class="menu-item" href="/tags/"><i class='fas fa-tags fa-lg'></i> 标签 </a><a class="menu-item" href="/categories/"><i class='fas fa-list-alt fa-lg'></i> 分类 </a><a class="menu-item" href="/categories/documentation/"> 文档 </a><a class="menu-item active" href="/about/"><i class = 'fa fa-question-circle fa-lg'></i> 关于 </a><a class="menu-item" href="/" title="GitHub"><i class='fab fa-github fa-fw' aria-hidden='true'></i>  </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
+            <div class="menu-inner"><a class="menu-item" href="/posts/"><i class='fas fa-book-open fa-lg'></i> 所有文章 </a><a class="menu-item" href="/tags/"><i class='fas fa-tags fa-lg'></i> 标签 </a><a class="menu-item" href="/categories/"><i class='fas fa-list-alt fa-lg'></i> 分类 </a><a class="menu-item" href="/game"> 游戏 </a><a class="menu-item active" href="/about/"><i class = 'fa fa-question-circle fa-lg'></i> 关于 </a><a class="menu-item" href="/" title="GitHub"><i class='fab fa-github fa-fw' aria-hidden='true'></i>  </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
                         <input type="text" placeholder="搜索文章标题或内容..." id="search-input-desktop">
                         <a href="javascript:void(0);" class="search-button search-toggle" id="search-toggle-desktop" title="搜索">
                             <i class="fas fa-search fa-fw" aria-hidden="true"></i>
@@ -96,7 +96,7 @@
                     <a href="javascript:void(0);" class="search-cancel" id="search-cancel-mobile">
                         取消
                     </a>
-                </div><a class="menu-item" href="/posts/" title=""><i class='fas fa-book-open fa-lg'></i>所有文章</a><a class="menu-item" href="/tags/" title=""><i class='fas fa-tags fa-lg'></i>标签</a><a class="menu-item" href="/categories/" title=""><i class='fas fa-list-alt fa-lg'></i>分类</a><a class="menu-item" href="/categories/documentation/" title="">文档</a><a class="menu-item" href="/about/" title=""><i class = 'fa fa-question-circle fa-lg'></i>关于</a><a class="menu-item" href="/" title="GitHub"><i class='fab fa-github fa-fw' aria-hidden='true'></i></a><a href="javascript:void(0);" class="menu-item theme-switch" title="切换主题">
+                </div><a class="menu-item" href="/posts/" title=""><i class='fas fa-book-open fa-lg'></i>所有文章</a><a class="menu-item" href="/tags/" title=""><i class='fas fa-tags fa-lg'></i>标签</a><a class="menu-item" href="/categories/" title=""><i class='fas fa-list-alt fa-lg'></i>分类</a><a class="menu-item" href="/game" title="">游戏</a><a class="menu-item" href="/about/" title=""><i class = 'fa fa-question-circle fa-lg'></i>关于</a><a class="menu-item" href="/" title="GitHub"><i class='fab fa-github fa-fw' aria-hidden='true'></i></a><a href="javascript:void(0);" class="menu-item theme-switch" title="切换主题">
                 <i class="fas fa-adjust fa-fw" aria-hidden="true"></i>
             </a><a href="javascript:void(0);" class="menu-item" title="选择语言">
                     <i class="fa fa-globe fa-fw" aria-hidden="true"></i>
