--- a/gametheory/index.html
+++ b/gametheory/index.html
@@ -254,8 +254,8 @@
 		    	  requiredMeta: ["nick","mail"],
 		    	  login: "force",
 				  placeholder: "注册登录，悦你所想...",
-		    	  serverURL: "https://newtea.ga",
-		    	  avatarCDN: "https://sdn.geekzu.org/avatar/",
+		    	  serverURL: "https://www.newtea.ga",
+		    	  avatarCDN: "https://sdn.geekzu.org/avatar",
 		    	  pageSize:  20 ,
 		    	  avatar: "retro",
 		    	  lang: "zh-CN",
