--- a/about/index.html
+++ b/about/index.html
@@ -111,8 +111,9 @@
     </div><main class="main">
                 <div class="container"><div class="page single special"><h1 class="single-title animate__animated animate__pulse animate__faster">关于</h1><div class="content" id="content"><blockquote>
 <p>享思所想</p>
-<p>皮·革新茶馆
-<div class="details admonition note open">
+<p>皮·革新茶馆</p>
+</blockquote>
+<p><div class="details admonition note open">
         <div class="details-summary admonition-title">
             <i class="icon fas fa-pencil-alt fa-fw" aria-hidden="true"></i>注意<i class="details-icon fas fa-angle-right fa-fw" aria-hidden="true"></i>
         </div>
@@ -125,7 +126,7 @@
     </div>
 
 
-	<a target="_blank" href=lewky.cn title=雨临Lewis的博客---不想当写手的码农不是好咸鱼_(xз」∠)_ class="friend url">
+	<a target="_blank" href=https://lewky.cn title=雨临Lewis的博客---不想当写手的码农不是好咸鱼_(xз」∠)_ class="friend url">
 	  <div class="friend block whole default shadow">
 		<div class="friend block left">
 		  <img class="friend logo rotate" src=https://cdn.jsdelivr.net/gh/lewky/lewky.github.io@master/images/avatar.jpg onerror="this.src='https:\/\/sdn.geekzu.org\/avatar\/d41d8cd98f00b204e9800998ecf8427e?d=retro'" />
@@ -138,7 +139,6 @@
 	</a>
 
 </p>
-</blockquote>
 </div><div id="comments"><div id="waline"></div>
 			<script src='https://cdn.jsdelivr.net/npm/@waline/client/dist/Waline.min.js'></script>
 
