--- a/en/about/index.html
+++ b/en/about/index.html
@@ -113,7 +113,7 @@
 <p>Share Anything</p>
 <p>Newtea</p>
 </blockquote>
-<div class="details admonition note open">
+<p><div class="details admonition note open">
         <div class="details-summary admonition-title">
             <i class="icon fas fa-pencil-alt fa-fw" aria-hidden="true"></i>Note<i class="details-icon fas fa-angle-right fa-fw" aria-hidden="true"></i>
         </div>
@@ -121,7 +121,7 @@
             <div class="admonition-content">Thanks For:</div>
         </div>
     </div>
-<p>
+
 
 	<a target="_blank" href=https://lewky.cn title=雨临Lewis的博客---不想当写手的码农不是好咸鱼_(xз」∠)_ class="friend url">
 	  <div class="friend block whole default led">
