--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="search-dropdown mobile">
         <div id="search-dropdown-mobile"></div>
     </div><main class="main">
-                <div class="container"><div class="page home" data-home="posts"><div class="home-profile"><div class="home-avatar"><a href="/posts/" title="所有文章"><img
+                <div class="container"><div class="page home" data-home="posts"><div class="home-profile"><div class="home-avatar"><a href="/posts/" title="皮"><img
         class="lazyload"
         src="/svg/loading.min.svg"
         data-src="/images/avatar.png"
