--- a/about/index.html
+++ b/about/index.html
@@ -158,6 +158,11 @@
 	</a>
 
 
+
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+  <iframe src="https://www.youtube-nocookie.com/embed/w7Ft2ymGmfc" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+</div>
+
 <h1 id="更新日志">更新日志</h1>
 <ul>
 <li>2023-03-09 添加友链样式、修复日期显示错误问题</li>
