--- a/free-app-share/index.html
+++ b/free-app-share/index.html
@@ -153,7 +153,7 @@
 <p>【界面】</p>
 <ul>
 <li>安卓<br>
-<figure><img src="/images/NO1app.jpg"/><figcaption>
+<figure><img src="/images/NO1app.png"/><figcaption>
               <h4>乐看APP</h4>
           </figcaption>
   </figure>
