--- a/en/game/index.html
+++ b/en/game/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
-        <title>逮住那只猫! - 皮革新茶馆</title><meta name="Description" content="皮·革新茶馆"><meta property="og:title" content="逮住那只猫!" />
-<meta property="og:description" content="游戏规则 点击小圆点，围住小猫。 你点击一次，小猫走一次。 直到你把小猫围住（赢），或者小猫走到边界并逃跑（输）。 " />
+        <title>catch the cat ! - 皮革新茶馆</title><meta name="Description" content="皮·革新茶馆"><meta property="og:title" content="catch the cat !" />
+<meta property="og:description" content="Game rules Click the dots to surround the kittens. You click once, and the cat walks once. Until you surround the kitten (win), or the kitten goes to the border and runs away (lose). " />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://newtea.tk/en/game/" /><meta property="og:image" content="https://newtea.tk/logo.png"/><meta property="article:section" content="" />
 
@@ -13,8 +13,8 @@
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="https://newtea.tk/logo.png"/>
 
-<meta name="twitter:title" content="逮住那只猫!"/>
-<meta name="twitter:description" content="游戏规则 点击小圆点，围住小猫。 你点击一次，小猫走一次。 直到你把小猫围住（赢），或者小猫走到边界并逃跑（输）。 "/>
+<meta name="twitter:title" content="catch the cat !"/>
+<meta name="twitter:description" content="Game rules Click the dots to surround the kittens. You click once, and the cat walks once. Until you surround the kitten (win), or the kitten goes to the border and runs away (lose). "/>
 <meta name="application-name" content="LoveIt">
 <meta name="apple-mobile-web-app-title" content="LoveIt"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -24,12 +24,12 @@
     {
         "@context": "http://schema.org",
         "@type": "BlogPosting",
-        "headline": "逮住那只猫!",
+        "headline": "catch the cat !",
         "inLanguage": "en",
         "mainEntityOfPage": {
             "@type": "WebPage",
             "@id": "https:\/\/newtea.tk\/en\/game\/"
-        },"image": ["https:\/\/newtea.tk\/images\/Apple-Devices-Preview.png"],"genre": "page","wordcount":  4 ,
+        },"image": ["https:\/\/newtea.tk\/images\/Apple-Devices-Preview.png"],"genre": "page","wordcount":  34 ,
         "url": "https:\/\/newtea.tk\/en\/game\/","license": "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License.","publisher": {
             "@type": "Organization",
             "name": "Newtea","logo": {
@@ -109,11 +109,11 @@
     <div class="search-dropdown mobile">
         <div id="search-dropdown-mobile"></div>
     </div><main class="main">
-                <div class="container"><div class="page single special"><h1 class="single-title animate__animated animate__pulse animate__faster">逮住那只猫!</h1><div class="content" id="content"><h2 id="游戏规则">游戏规则</h2>
+                <div class="container"><div class="page single special"><h1 class="single-title animate__animated animate__pulse animate__faster">catch the cat !</h1><div class="content" id="content"><h2 id="game-rules">Game rules</h2>
 <ol>
-<li>点击小圆点，围住小猫。</li>
-<li>你点击一次，小猫走一次。</li>
-<li>直到你把小猫围住（赢），或者小猫走到边界并逃跑（输）。</li>
+<li>Click the dots to surround the kittens.</li>
+<li>You click once, and the cat walks once.</li>
+<li>Until you surround the kitten (win), or the kitten goes to the border and runs away (lose).</li>
 </ol>
 <hr>
 <div align="center">
