--- a/game-theory/index.html
+++ b/game-theory/index.html
@@ -152,7 +152,7 @@
   </ul>
 </nav></div>
             </div><div class="content" id="content"><h2 id="博弈论---简说">博弈论 - 简说</h2>
-<figure><img src="/images/John-von-Neumann.jpg"/><figcaption>
+<figure><img src="/images/John-von-Neumann.jpg" width="30%"/><figcaption>
             <h4>John von Neumann</h4>
         </figcaption>
 </figure>
