--- a/the-velvet-undergroud/index.html
+++ b/the-velvet-undergroud/index.html
@@ -140,7 +140,7 @@
   </ul>
 </nav></div>
             </div><div class="content" id="content"><h2 id="--地下丝绒">- 地下丝绒</h2>
-<figure><img src="/images/The-Velvet-Underground.jpg"/><figcaption>
+<figure><img src="/images/The-Velvet-Underground.jpg" width="50%"/><figcaption>
             <h4>The Velvet Underground</h4>
         </figcaption>
 </figure>
