--- a/mofa.html
+++ b/mofa.html
@@ -62,11 +62,11 @@
 <p>以 魔法 代称服务！</p>
 <p>扫码加：</p>
 <p>
-	<img src="../images/wdvx.png" alt="vx">​
+	<img src="https://newtea.tk/images/wdvx.png" alt="vx">​
 	</p>
 	<h2 id="2、特点：永久可用不限速（根据自己网络速度跑满）">2、特点：永久可用不限速（根据自己网络速度跑满）</h2>
 	<p>​
-		<img src="../images/youtube.png" alt="youtube">​
+		<img src="https://newtea.tk/images/youtube.png" alt="youtube">​
 		</p>
 		<h2 id="3、价格：按服务类型">3、价格：按服务类型</h2>
 		<h3 id="选择1：远程服务、含其他魔法提供（windows）">选择1：远程服务、含其他魔法提供（Windows）</h3>
