--- a/mofa.html
+++ b/mofa.html
@@ -70,19 +70,19 @@
 		</p>
 		<h2 id="3、价格：按服务类型">3、价格：按服务类型</h2>
 		<h3 id="选择1：远程服务、含其他魔法提供（windows）">选择1：远程服务、含其他魔法提供（Windows）</h3>
-		<h5 id="价格：188￥">价格：188￥</h5>
+		<h5 id="价格：88￥">价格：88￥</h5>
 		<h5 id="注意：暂时不服务mac">注意：暂时不服务Mac</h5>
 		<h3 id="选择2：自己配置、不含其他魔法服务">选择2：自己配置、不含其他魔法服务</h3>
-		<h5 id="价格：128￥">价格：128￥</h5>
+		<h5 id="价格：58￥">价格：58￥</h5>
 		<h2 id="4、使用说明">4、使用说明</h2>
-		<h5 id="！！！同时使用不超过-5-个设备">！！！同时使用不超过 5 个设备</h5>
-		<h2 id="5、售后问题">5、售后问题</h2>
-		<h2 id="6、特殊-购买技术：588￥">6、※特殊-购买技术：588￥</h2>
+		<h4 id="！！！同时使用不超过-5-个设备">！！！同时使用不超过 5 个设备</h4>
+		<h2 id="5、售后问题">5、售后问题:会尽快回复</h2>
+		<h2 id="6、特殊-购买技术：188￥">6、※特殊-购买技术：188￥</h2>
 		<h2 id="7、工具下载说明：">7、工具下载说明：</h2>
 		<h3 id="选择1可全程指导。">选择1可全程指导。</h3>
 		<h3 id="选择2须知！！！">选择2须知！！！</h3>
-		<h6 id="请下载安装工具：wireguard">请下载安装工具：wireguard</h6>
-		<h6 id="ios下载需要海外id">IOS下载需要海外ID</h6>
+		<h5 id="请下载安装工具：wireguard">请下载安装工具：wireguard</h5>
+		<h5 id="ios下载需要海外id">IOS下载需要海外ID（可代注册，外加服务费20）</h5>
 		<p>‍</p>
 
 </body>
