--- a/mofa.html
+++ b/mofa.html
@@ -58,6 +58,8 @@
 
 <body>
 <h1 id="mofa">mofa</h1>
+<h1 id="mofa">可以上youtube，高清4k流畅不卡</h1>
+<h1 id="mofa">还有Twitter、Instagram、海外直播、海外频道等等都可以使用哦。可教程</h1>
 <h2 id="1、加微信：suibianan8">1、加微信：suibianan8</h2>
 <p>以 魔法 代称服务！</p>
 <p>扫码加：</p>
@@ -73,7 +75,7 @@
 		<h5 id="价格：88￥">价格：108￥</h5>
 		<h5 id="注意：暂时不服务mac">注意：暂时不服务Mac</h5>
 		<h3 id="选择2：自己配置、不含其他魔法服务">选择2：自己配置、不含其他魔法服务</h3>
-		<h5 id="价格：58￥">价格：58￥</h5>
+		<h5 id="价格：58￥">价格：68￥</h5>
 		<h2 id="4、使用说明">4、使用说明</h2>
 		<h4 id="！！！同时使用不超过-5-个设备">！！！同时使用不超过 5 个设备</h4>
 		<h2 id="5、售后问题">5、售后问题:会尽快回复</h2>
