--- a/mofa.html
+++ b/mofa.html
@@ -72,12 +72,16 @@
 		</p>
 		<h2 id="3、价格：按服务类型">3、价格：按服务类型</h2>
 		<h3 id="选择1：远程服务、含其他魔法提供（windows）">选择1：远程服务、含其他魔法提供（Windows）</h3>
-		<h5 id="价格：88￥">价格：108￥</h5>
+		<h5 id="价格：108￥"><del>188￥</del>价格：108￥</h5>
 		<h5 id="注意：暂时不服务mac">注意：暂时不服务Mac</h5>
 		<h3 id="选择2：自己配置、不含其他魔法服务">选择2：自己配置、不含其他魔法服务</h3>
-		<h5 id="价格：58￥">价格：68￥</h5>
+		<h5 id="价格：68￥">价格：<del>108￥</del>68￥</h5>
 		<h2 id="4、使用说明">4、使用说明</h2>
 		<h4 id="！！！同时使用不超过-5-个设备">！！！同时使用不超过 5 个设备</h4>
+		<h3 id="区别">跟免费的有什么区别？</h3>
+		<h4 id="区别">无广告、安全去日志、无痕、安全加速、不限速、不限流量</h4>
+		<h4 id="区别">先去体验那些市面上的免费产品、月付产品</h4>
+		<h4 id="区别">如果你仅仅手机使用那么特惠<del>68￥</del>只要48￥，已经是最低价格、请勿议价</h4>
 		<h2 id="5、售后问题">5、售后问题:会尽快回复</h2>
 		<h2 id="6、特殊-购买技术：188￥">6、※特殊-购买技术：188￥</h2>
 		<h2 id="7、工具下载说明：">7、工具下载说明：</h2>
