--- a/mofa.html
+++ b/mofa.html
@@ -81,7 +81,8 @@
 		<h3 id="区别">跟免费的有什么区别？</h3>
 		<h4 id="区别">无广告、安全去日志、无痕、安全加速、不限速、不限流量</h4>
 		<h4 id="区别">先去体验那些市面上的免费产品、月付产品</h4>
-		<h4 id="区别">如果你仅仅手机使用那么特惠<del>68￥</del>只要48￥，已经是最低价格、请勿议价</h4>
+		<h4 id="区别">如果你仅仅手机使用那么<del>68￥</del>49￥</h4>
+		<h4 id="区别">IOS可提供海外ID下载wireguard</h4>
 		<h2 id="5、售后问题">5、售后问题:会尽快回复</h2>
 		<h2 id="6、特殊-购买技术：188￥">6、※特殊-购买技术：188￥</h2>
 		<h2 id="7、工具下载说明：">7、工具下载说明：</h2>
