--- a/mofa.html
+++ b/mofa.html
@@ -71,10 +71,10 @@
 		<img src="https://newtea.tk/images/youtube.png" alt="youtube">​
 		</p>
 		<h2 id="3、价格：按服务类型">3、价格：按服务类型</h2>
-		<h3 id="选择1：远程服务、含其他魔法提供（windows）">选择1：远程服务、含其他魔法提供（Windows）</h3>
+		<h4 id="注意：暂时不服务mac">注意：暂时不服务Mac</h4>
+		<h3 id="选择1：远程服务、含其他魔法提供（windows）">选择1：远程服务、含其他魔法提供（可用ChatGPT）</h3>
 		<h4 id="价格：108￥">价格：<del>188￥</del> 108￥</h4>
-		<h5 id="注意：暂时不服务mac">注意：暂时不服务Mac</h5>
-		<h3 id="选择2：自己配置、不含其他魔法服务">选择2：自己配置、不含其他魔法服务</h3>
+		<h3 id="选择2：自己配置、不含其他魔法服务">选择2：远程服务</h3>
 		<h4 id="价格：68￥">价格：<del>108￥</del> 68￥</h4>
 		<h2 id="4、使用说明">4、使用说明</h2>
 		<h4 id="！！！同时使用不超过-5-个设备">！！！同时使用不超过 5 个设备</h4>
