--- a/mofa.html
+++ b/mofa.html
@@ -71,26 +71,40 @@
 		<img src="https://newtea.tk/images/youtube.png" alt="youtube">​
 		</p>
 		<h2 id="3、价格：按服务类型">3、价格：按服务类型</h2>
+	
 		<h4 id="注意：暂时不服务mac">注意：暂时不服务Mac</h4>
+	
 		<h3 id="选择1：远程服务、含其他魔法提供（windows）">选择1：远程服务、含其他魔法提供（可用ChatGPT）</h3>
+	
 		<h4 id="价格：108￥">价格：<del>188￥</del> 108￥</h4>
+	
 		<h3 id="选择2：自己配置、不含其他魔法服务">选择2：远程服务</h3>
+	
 		<h4 id="价格：68￥">价格：<del>108￥</del> 68￥</h4>
+	
 		<h2 id="4、使用说明">4、使用说明</h2>
+	
 		<h4 id="！！！同时使用不超过-5-个设备">！！！同时使用不超过 5 个设备</h4>
+	
 		<h3 id="区别">跟免费的有什么区别？</h3>
+	
 		<h4 id="区别">无广告、安全去日志、无痕、安全加速、不限速、不限流量</h4>
-		<h4 id="区别">先去体验那些市面上的免费产品、月付产品</h4>
-		<h4 id="区别">如果你仅仅手机使用那么<del>68￥</del>49￥</h4>
+	
+		<h4 id="区别">如果觉得价格不妥：先去体验那些市面上的免费产品、月付产品</h4>
+	
+		<h4 id="区别">如果你仅仅手机使用那么省去远程<del>68￥</del>49￥</h4>
+	
 		<h4 id="区别">IOS可提供海外ID下载wireguard</h4>
+		
 		<h2 id="5、售后问题">5、售后问题:会尽快回复</h2>
-		<h2 id="6、特殊-购买技术：188￥">6、※特殊-购买技术：188￥</h2>
-		<h2 id="7、工具下载说明：">7、工具下载说明：</h2>
-		<h3 id="选择1可全程指导。">选择1可全程指导。</h3>
-		<h3 id="选择2须知！！！">选择2须知！！！</h3>
-		<h5 id="请下载安装工具：wireguard">请下载安装工具：wireguard</h5>
-		<h5 id="ios下载需要海外id">IOS下载需要海外ID（可代注册，外加服务费20）</h5>
-		<p>‍</p>
+	
+		<h4 id="请下载安装工具：wireguard">请确认可以安装工具：wireguard<a href="https://wwqx.lanzoul.com/iaubH0t2lpad">点击下载</a>密码:pi88</h4>
+	
+		<h4 id="ios下载需要海外id">可代注册IOS海外ID，服务费15￥</h4>
+	
+		<h4 id="ios下载需要海外id">可代注册ChatGPT，人工+成本30￥</h4>
+	
+		<h4 id="ios下载需要海外id">可代注册Google账号，人工15￥</h4>
 
 </body>
 
