--- a/mofa.html
+++ b/mofa.html
@@ -67,7 +67,7 @@
 <p>
 	<img src="https://newtea.tk/images/wdvx.png" alt="vx">​
 	</p>
-	<h2 id="2、特点：永久可用不限速（根据自己网络速度跑满）">2、特点：永久可用不限速（根据自己网络速度跑满）</h2>
+	<h2 id="2、特点：我们会一直维护它，保持可用性、不限速（根据自己网络速度跑满）">2、特点：一次性付清、不限速（根据自己网络速度跑满）</h2>
 	<p>​
 		<img src="https://newtea.tk/images/youtube.png" alt="youtube">​
 		</p>
