--- a/mofa.html
+++ b/mofa.html
@@ -68,6 +68,7 @@
 	<img src="https://newtea.tk/images/wdvx.png" alt="vx">​
 	</p>
 	<h2 id="2、特点：我们会一直维护它，保持可用性、不限速（根据自己网络速度跑满）">2、特点：一次性付清、不限速（根据自己网络速度跑满）</h2>
+	<h2 id="2、特点：我们会一直维护它，保持可用性、不限速（根据自己网络速度跑满）">新增10元5GB流量套餐、如果你是轻用完全可以选择这个（安卓需要v2ray或者clash），IOS如果有小火箭也可以购买此服务！</h2>
 	<p>​
 		<img src="https://newtea.tk/images/youtube.png" alt="youtube">​
 		</p>
