--- a/mofa.html
+++ b/mofa.html
@@ -1,14 +1,25 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
 	<title>魔法说明</title>
 	<style>
 		body {
-			font-family: 'Helvetica Neue', sans-serif;
-			background-color: #bcd1e9;
-			text-align: center;
-		}
+        background: linear-gradient(45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+        background-size: 400% 400%;
+        animation: gradientBG 15s ease infinite;
+      }
+
+      @keyframes gradientBG {
+        0% {
+          background-position: 0% 50%;
+        }
+        50% {
+          background-position: 100% 50%;
+        }
+        100% {
+          background-position: 0% 50%;
+        }
 
 		h1 {
 			font-size: 36px;
@@ -67,10 +78,10 @@
 <p>
 	<img src="https://newtea.tk/images/wdvx.png" alt="vx">​
 	</p>
-	<h2 id="2、特点：我们会一直维护它，保持可用性、不限速（根据自己网络速度跑满）">2、特点：一次性付清、不限速（根据自己网络速度跑满）</h2>
-	<h2 id="2、特点：我们会一直维护它，保持可用性、不限速（根据自己网络速度跑满）">新增10元5GB流量套餐、如果你是轻用完全可以选择这个（安卓需要v2ray或者clash），IOS如果有小火箭也可以购买此服务！</h2>
+	<h2 id="2、特点：我们会一直维护它，保持可用性、不限速（根据自己网络速度跑满）">🎉2、特点：一次性付清、不限速（根据自己网络速度跑满）</h2>
+	<h2 id="2、特点：我们会一直维护它，保持可用性、不限速（根据自己网络速度跑满）">⭐:新增10元5GB流量套餐、如果你是轻用完全可以选择这个（安卓需要v2ray或者clash），IOS如果有小火箭也可以购买此服务！</h2>
 	<p>​
-		<img src="https://newtea.tk/images/youtube.png" alt="youtube">​
+		<img src="https://newtea.tk/images/youtube.png" width="500" alt="youtube">​
 		</p>
 		<h2 id="3、价格：按服务类型">3、价格：按服务类型</h2>
 	
