--- a/chatgpt.html
+++ b/chatgpt.html
@@ -115,7 +115,7 @@
 	<h1 id="分享一些及时可以用的chatgpt">分享一些及时可以用的ChatGPT</h1>
 	<ul>
 		<li>
-			<a href="https://gpt.newtea.tk">https://gpt.newtea.tk</a>
+			<a href="https://gpt.pgxcg.tk">https://gpt.pgxcg.tk</a>
 		</li>
 		<li>
 			<a href="https://beta.character.ai/">https://beta.character.ai/</a>
