--- a/en/excel-knowledge/index.html
+++ b/en/excel-knowledge/index.html
@@ -163,7 +163,7 @@
 		    	  requiredMeta: ["nick","mail"],
 		    	  login: "force",
 				  placeholder: "注册登录，悦你所想...",
-		    	  serverURL: "https://www.newtea.ga",
+		    	  serverURL: "https://www.newtea.cf",
 		    	  avatarCDN: "https://sdn.geekzu.org/avatar",
 		    	  pageSize:  20 ,
 		    	  avatar: "retro",
